src/objects/Special_Event_Booking__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <description>Looks at the Opportunity Owner&apos;s ID rather than the name</description>
        <formula>Opportunity__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related opportunity owner&apos;s ID</inlineHelpText>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The stage of the opportunity that the Event Booking links too.</inlineHelpText>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to related opportunity</description>
        <inlineHelpText>Lookup field to related opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>BSC Event Bookings</relationshipLabel>
        <relationshipName>BSC_Event_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_Booking_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is unchecked the Booking Fee will be automatically updated from the Opportunity Line. Check this box to enter an manual booking fee which won&apos;t be updated automatically.</inlineHelpText>
        <label>Override Booking Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PK_CB_ELEM_ID__c</fullName>
        <description>This is the Primary Key of the Element (BSC Event Booking) from the source Elements  data and maps to Elements.ELEM_ID from the Elements  table in the CB database.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a system admin field</inlineHelpText>
        <label>PK_CB_ELEM_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partial_Attendance_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partial Attendance Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies whether this booking is Primary or not..</description>
        <inlineHelpText>Signifies whether this booking is Primary or not..</inlineHelpText>
        <label>Primary Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <description>Used for Conga Transfer Form</description>
        <formula>Special_Event__r.Product__r.Id</formula>
        <inlineHelpText>Pulls in the related event product&apos;s id</inlineHelpText>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Pulls in the related events product name</description>
        <formula>Special_Event__r.Product__r.Name</formula>
        <inlineHelpText>Pulls in the related events product name</inlineHelpText>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When ticked workflow sends survey to delegate</description>
        <inlineHelpText>When ticked workflow &quot;Send Booking Survey&quot; sends survey to delegate</inlineHelpText>
        <label>Send Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Event__c</fullName>
        <description>lookup to the event the event booking relates to</description>
        <inlineHelpText>lookup to the event the event booking relates to</inlineHelpText>
        <label>BSC Event</label>
        <referenceTo>Special_Event__c</referenceTo>
        <relationshipLabel>BSC Event Bookings (BSC Event)</relationshipLabel>
        <relationshipName>R00N50000001mIaiEAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Shows the status of the event booking</description>
        <inlineHelpText>Shows the status of the event booking</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Provisional</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled - Provisional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled - Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Transferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled - BSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended - Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended - Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended - Merit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended - Distinction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_URL__c</fullName>
        <description>Creates the URL to use with GetFeedback Survey</description>
        <formula>Special_Event__r.Product__r.Survey_URL__c+
&apos;?ContactID=&apos;+Contact_ID__c +
&apos;&amp;Special_Event_Booking__c.id=&apos;+Id+
&apos;&amp;Product2.id=&apos;+Product_ID__c+
&apos;&amp;Name=&apos;+ LOOP_Delegate_Name__c+
&apos;&amp;AccountId=&apos;+ Delegate_Account_ID__c+
&apos;&amp;opportunityId=&apos;+ Opportunity__c+
&apos;&amp;Product=&apos;+  LOOP_Event_Product__c</formula>
        <inlineHelpText>URL used for get feedback survey</inlineHelpText>
        <label>Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TnC_Event_Units__c</fullName>
        <label>TnC Event Units</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transfer_Cancellation_Date__c</fullName>
        <description>The date on which the booking is transferred or cancelled</description>
        <inlineHelpText>The date on which the booking is transferred or cancelled</inlineHelpText>
        <label>Transfer / Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transfer_Cancellation_Fee__c</fullName>
        <description>Transfer / Cancellation Fees</description>
        <inlineHelpText>Transfer / Cancellation Fees</inlineHelpText>
        <label>Transfer / Cancellation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transfer_Cancellation_Notes__c</fullName>
        <description>Notes entered in the transfer and cancellation reason VF Component.</description>
        <label>Transfer / Cancellation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Transfer_Cancellation_Process_Date__c</fullName>
        <description>When the transfer / cancellation was processed by BSC</description>
        <inlineHelpText>When the transfer / cancellation was processed by BSC</inlineHelpText>
        <label>Transfer / Cancellation Process Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transfer_Cancellation_Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer / Cancellation Reason</label>
        <referenceTo>Transfer_Cancellation_Reasons__c</referenceTo>
        <relationshipLabel>BSC Event Bookings</relationshipLabel>
        <relationshipName>BSC_Event_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for transferring public bookings to a new event. Auto populated when transferring a public booking.</description>
        <inlineHelpText>Used for transferring public bookings to a new event. Auto populated when transferring a public booking.</inlineHelpText>
        <label>Transfer to: Event</label>
        <referenceTo>Special_Event__c</referenceTo>
        <relationshipLabel>BSC Event Bookings (Transfer To)</relationshipLabel>
        <relationshipName>BSC_Event_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferred_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be populated with the previous field if a booking is transferred</description>
        <inlineHelpText>This field will be populated with the previous field if a booking is transferred</inlineHelpText>
        <label>Transferred From</label>
        <referenceTo>Special_Event_Booking__c</referenceTo>
        <relationshipLabel>Previous Bookings</relationshipLabel>
        <relationshipName>BSC_Event_Bookings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferred_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicates the subsequent booking if a booking is transferred</description>
        <inlineHelpText>This field indicates the subsequent booking if a booking is transferred</inlineHelpText>
        <label>Transferred to: Booking</label>
        <referenceTo>Special_Event_Booking__c</referenceTo>
        <relationshipLabel>Subsequent Bookings</relationshipLabel>
        <relationshipName>BSC_Event_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Defines the event booking type whether primary or additional etc</description>
        <inlineHelpText>Defines the event booking type whether primary or additional etc</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Company Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Company Additional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Company Additional - On the Day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Confirmed__c</fullName>
        <description>To show the user id for the person who updated the status to confirmed. (Not shown on the page layout, purely for reporting purposes)</description>
        <inlineHelpText>To show the user id for the person who updated the status to confirmed.</inlineHelpText>
        <label>User Confirmed</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Address__c</fullName>
        <formula>Special_Event__r.Venue__r.Name &amp; BR()+
Special_Event__r.Venue_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_URL__c</fullName>
        <formula>Special_Event__r.Venue__r.Venue_Website_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue URL</label>
        <type>Text</type>
    </fields>
    <label>BSC Event Booking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Special_Event__c</columns>
        <columns>Company__c</columns>
        <columns>Contact__c</columns>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Migrated_BSC_Event_Bookings</fullName>
        <columns>Special_Event__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Migrated_c__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Migrated BSC Event Bookings</label>
        <sharedTo>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TBAs</fullName>
        <columns>NAME</columns>
        <columns>Special_Event__c</columns>
        <columns>Company__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>Event_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact__c</field>
            <operation>startsWith</operation>
            <value>to</value>
        </filters>
        <label>TBAs</label>
    </listViews>
    <nameField>
        <displayFormat>EB-{0000000}</displayFormat>
        <label>Event Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BSC Event Bookings</pluralLabel>
    <recordTypes>
        <fullName>BSC_Event_Booking</fullName>
        <active>true</active>
        <label>BSC Event Booking</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Chk_Overbooking_with_Confirmed_Status_N</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(),
ISPICKVAL(Status__c, &quot;Confirmed&quot;),
Special_Event__r.No_of_Delegates_Booked__c&gt;= Special_Event__r.Maximum_Places__c,
NOT(Special_Event__r.Allow_Overbooking__c )
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Event does not allow overbooking. Number of confirmed bookings already equal to or greater than maximum places.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Chk_Overbooking_with_Confirmed_Status_U</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNEW()), 
ISPICKVAL(Status__c, &quot;Confirmed&quot;), 
NOT(ISPICKVAL(PRIORVALUE( Status__c), &quot;Confirmed&quot;)),
Special_Event__r.No_of_Delegates_Booked__c&gt;= Special_Event__r.Maximum_Places__c,
 NOT(Special_Event__r.Allow_Overbooking__c ) 
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Event does not allow overbooking. Number of confirmed bookings already equal to or greater than maximum places.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stop_field_changes_all_finance_statuses</fullName>
        <active>false</active>
        <description>If the Finance status is either Invoiced, Paid, Part Paid then some opp fields can&apos;t be changed.</description>
        <errorConditionFormula>IF(
   AND(
      OR(
         ISPICKVAL(Opportunity__r.StageName, &apos;Invoiced&apos;),
         ISPICKVAL(Opportunity__r.StageName, &apos;Paid&apos;), 
         ISPICKVAL(Opportunity__r.StageName, &apos;Part Paid&apos;),
         ISPICKVAL(Opportunity__r.StageName, &apos;Part Invoiced&apos;)
      ),
      ISCHANGED(Booking_Fee__c),
      Opportunity__r.Using_one_to_one_invoicing__c = &apos;Yes&apos;
   ),
   true,
   false
)</errorConditionFormula>
        <errorDisplayField>Booking_Fee__c</errorDisplayField>
        <errorMessage>You cannot change the booking fee when the opportunity has been Invoiced, Part Paid or Paid.</errorMessage>
    </validationRules>
</CustomObject>